Add items in bill and fixed side-bar
Itens can now be added to credit card bill and side bar is fixed

--- a/src/app/pages/credit-card/credit-card.component.html
+++ b/src/app/pages/credit-card/credit-card.component.html
@@ -210,6 +210,14 @@
               </div>
             </div>
           </div>
+
+          <!-- Botão para adicionar novo item -->
+          <div class="adicionar-item-section">
+            <button class="btn-adicionar-item" (click)="abrirFormularioItem()">
+              <span class="icon-plus">+</span>
+              Adicionar Item na Fatura
+            </button>
+          </div>
         </div>
       </div>
     </div>
