--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -7,6 +7,11 @@
   justify-content: space-between;
   padding: 20px;
   border-right: 1px solid #e5e7eb;
+  position: fixed;
+  top: 0;
+  left: 0;
+  overflow-y: auto;
+  z-index: 100;
 
   .logo {
     display: flex;
@@ -191,5 +196,23 @@
     &:hover {
       color: #ef4444;
     }
+  }
+}
+
+// Customizar scrollbar
+.sidebar::-webkit-scrollbar {
+  width: 6px;
+}
+
+.sidebar::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+.sidebar::-webkit-scrollbar-thumb {
+  background: #cbd5e0;
+  border-radius: 3px;
+
+  &:hover {
+    background: #a0aec0;
   }
 }
