added edit-card, fixed date and remove item bill
user can now edit a already created card, fixed bill closing date and also user can remove item from credit card bill.

--- a/src/app/components/main-layout/main-layout.component.scss
+++ b/src/app/components/main-layout/main-layout.component.scss
@@ -1,9 +1,11 @@
 .main-layout {
   display: flex;
+  height: 100%;
 
   .content {
     flex: 1;
     background-color: #f9fafb;
     min-height: 100vh;
+    overflow: auto;
   }
 }
