--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -20,7 +20,7 @@
     <ul>
       <li><i class="icon">⚙️</i> Settings</li>
       <li class="dark-mode">
-        <i class="icon">🌙</i> Dark mode
+        <i class=></i>Dark mode
         <label class="switch">
           <span class="slider"></span>
         </label>
