--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -12,7 +12,7 @@
     <ul>
       <li (click)="goToDashboard()"><i class="icon">📊</i> Dashboard</li>
       <li (click)="goToCreditCard()"><i class="icon">💳</i> Cartões</li>
-      <li routerLink="/missoes" routerLinkActive="active"><i class="icon">🎯</i> Missões</li>
+      <li (click)="goToMissions()"><i class="icon">🎯</i> Missões</li>
       <li (click)="goToAccounts()"><i class="icon">🏦</i> Contas</li>
     </ul>
 
