--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -13,6 +13,7 @@
       <li (click)="goToCreditCard()"><i class="icon">💳</i> Cartões</li>
       <li (click)="goToMissions()"><i class="icon">🎯</i> Missões</li>
       <li (click)="goToAccounts()"><i class="icon">🏦</i> Contas</li>
+      <li (click)="goToAchivements()"><i class="icon">🏆</i> Conquistas</li>
     </ul>
 
     <p class="section-title">System</p>
