--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -28,6 +28,15 @@
     </ul>
   </nav>
 
+  <!-- Medalha do Rank - Centralizada -->
+  <div class="medal-section">
+    <img
+      [src]="medalImage"
+      [alt]="'Medalha ' + userRank"
+      class="medal-image"
+    />
+  </div>
+
   <div class="profile-section">
     <div class="profile">
       <div class="info">
