--- a/src/app/components/edit-despesa-modal/edit-despesa-modal.component.html
+++ b/src/app/components/edit-despesa-modal/edit-despesa-modal.component.html
@@ -79,7 +79,7 @@
                 <span class="conta">{{ despesa.accounts.name }}</span>
                 <span class="categoria">{{ despesa.category.description }}</span>
               </p>
-              <p class="despesa-data">{{ formatarData(despesa.payDate) }}</p>
+              <p class="despesa-data">{{ formatarData(despesa.dateRegistration) }}</p>
             </div>
             <div class="despesa-valor">
               R$ {{ formatarValor(despesa.value) }}
