--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,17 +1,26 @@
 @import "../../../styles/variables.scss";
 
 form{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-    margin-bottom: 34px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  margin-bottom: 34px;
 
-    span{
-        font-size: 14px;
-        text-decoration: underline;
-        color: $secundary-color;
-        text-align: end;
-        
+  span{
+    font-size: 14px;
+    text-decoration: underline;
+    color: $secundary-color;
+    text-align: end;
+  }
+
+  // ✅ NOVO: Estilo para o link clicável
+  .forgot-password-link {
+    cursor: pointer;
+    transition: color 0.2s ease;
+
+    &:hover {
+      color: darken($secundary-color, 10%);
     }
+  }
 }
