--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -7,7 +7,7 @@
   </div>
 
   <nav class="menu">
-    <p class="section-title">Main</p>
+    <p class="section-title"></p>
     <ul>
       <li (click)="goToDashboard()"><i class="icon">📊</i> Dashboard</li>
       <li (click)="goToCreditCard()"><i class="icon">💳</i> Cartões</li>
@@ -16,16 +16,7 @@
       <li (click)="goToAchivements()"><i class="icon">🏆</i> Conquistas</li>
     </ul>
 
-    <p class="section-title">System</p>
-    <ul>
-      <li><i class="icon">⚙️</i> Settings</li>
-      <li class="dark-mode">
-        <i class=></i>Dark mode
-        <label class="switch">
-          <span class="slider"></span>
-        </label>
-      </li>
-    </ul>
+    <p class="section-title"></p>
   </nav>
 
   <!-- Medalha do Rank - Centralizada -->
