--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,8 +1,7 @@
 <div class="sidebar">
   <div class="logo-arrow">
     <div class="logo">
-      <span class="logo-icon">🦝</span>
-      <span class="logo-text">Guaxicash</span>
+      <img src="350x350.png"/>
     </div>
   </div>
 
