--- a/src/app/components/default-login-layout/default-login-layout.component.html
+++ b/src/app/components/default-login-layout/default-login-layout.component.html
@@ -1,6 +1,6 @@
 <main>
     <section class="form-section">
-        <img src="logo.png"/>
+        <img src="350x350.png"/>
         <h2>{{ title }}</h2>
         <ng-content></ng-content>
         <div class="btn-wrapper">
