--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -11,11 +11,10 @@
   .logo {
     display: flex;
     align-items: center;
-    gap: 8px;
-    font-size: 20px;
-    font-weight: bold;
-    color: #166534;
-    margin-bottom: 24px;
+  }
+
+  img{
+    height: 200px;
   }
 
   .logo-arrow {
