--- a/src/app/components/primary-input/primary-imput.component.scss
+++ b/src/app/components/primary-input/primary-imput.component.scss
@@ -1,40 +1,46 @@
 @import "../../../styles/variables.scss";
 
-.input-wrapper {
-    color: $text-color;
-    font-size: 16px;
-    text-align: start;
-
-    label{
-        margin-bottom: 10px;
-    }
-
-    .input-content{
-        width: 100%;
-        border-radius: 8px;
-        display: flex;
-
-        icon {
-            padding: 12px;
-            background-color: $primary-color;
-            border-radius: 0 8px 8px 0;
-
-            img{
-                height: 20px;
-            }
-        }
-    }
-
+:host {
+  display: block;
+  margin: 0; // ✅ Remove margin
+  padding: 0; // ✅ Remove padding
 }
-        input {
-            border: none;
-            border-radius: 8px 0 0 8px;
-            background-color: $gray-secondary-bg;
 
-            color: $text-color;
-            font-size: 16px;
-            text-align: start;
+.input-wrapper {
+  color: $text-color;
+  font-size: 16px;
+  text-align: start;
+  margin: 0; // ✅ Adicione isso
 
-            padding: 12px 0 12px 20px;
-            width: 100%;
-        }
+  label {
+    display: block;
+    margin-bottom: 8px;
+  }
+
+  .input-content {
+    width: 100%;
+    border-radius: 8px;
+    display: flex;
+
+    icon {
+      padding: 12px;
+      background-color: $primary-color;
+      border-radius: 0 8px 8px 0;
+
+      img {
+        height: 20px;
+      }
+    }
+  }
+}
+
+input {
+  border: none;
+  border-radius: 8px 0 0 8px;
+  background-color: $gray-secondary-bg;
+  color: $text-color;
+  font-size: 16px;
+  text-align: start;
+  padding: 12px 0 12px 20px;
+  width: 100%;
+}
