--- a/src/app/pages/signup/signup.component.scss
+++ b/src/app/pages/signup/signup.component.scss
@@ -1,17 +1,16 @@
 @import "../../../styles/variables.scss";
 
-form{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-    margin-bottom: 34px;
+form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 12px; // ✅ Vai funcionar agora
+  margin-bottom: 34px;
 
-    span{
-        font-size: 14px;
-        text-decoration: underline;
-        color: $secundary-color;
-        text-align: end;
-        
-    }
+  span {
+    font-size: 14px;
+    text-decoration: underline;
+    color: $secundary-color;
+    text-align: end;
+  }
 }
